--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
 
     <header class="header">
       <div class="container">
+        <!-- Desktop -->
+
         <div class="header-container">
           <nav class="nav">
             <a href="./index.html" class="link logo h-logo"
@@ -58,6 +60,88 @@
             </ul>
           </address>
         </div>
+
+        <!-- Mobile -->
+
+        <div class="header-container-mobile">
+          <a href="./index.html" class="link logo h-logo"
+            ><span class="logo-item">Web</span>Studio</a
+          >
+          <button type="button" class="burger-menu-btn js-open-menu">
+            <svg class="burger-menu-icon">
+              <use href="./images/icons.svg#icon-burger-menu"></use>
+            </svg>
+          </button>
+        </div>
+
+        <div class="mobile-menu js-menu-container">
+          <button class="modal-close js-close-menu" type="button">
+            <svg class="modal-close-icon">
+              <use href="./images/icons.svg#icon-modal-close"></use>
+            </svg>
+          </button>
+          <div class="mobile-menu-container">
+            <nav class="nav">
+              <ul class="nav-ul">
+                <li>
+                  <a href="./index.html" class="link h-link">Studio</a>
+                </li>
+                <li>
+                  <a href="./portfolio.html" class="link h-link">Portfolio</a>
+                </li>
+                <li>
+                  <a href="" class="link current-link h-link">Contacts</a>
+                </li>
+              </ul>
+            </nav>
+
+            <address>
+              <ul class="address-ul">
+                <li>
+                  <a href="mailto:info@devstudio.com" class="address"
+                    >info@devstudio.com</a
+                  >
+                </li>
+                <li>
+                  <a href="tel:+110001111111" class="address"
+                    >+11 (000) 111-11-11</a
+                  >
+                </li>
+              </ul>
+            </address>
+
+            <ul class="socials">
+              <li class="socials-item">
+                <a href="" class="socials-link">
+                  <svg class="socials-icon">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="socials-item">
+                <a href="" class="socials-link">
+                  <svg class="socials-icon">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="socials-item">
+                <a href="" class="socials-link">
+                  <svg class="socials-icon">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="socials-item">
+                <a href="" class="socials-link">
+                  <svg class="socials-icon">
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
     </header>
 
@@ -81,7 +165,7 @@
         <div class="container">
           <h2 class="hidden">Our advantages</h2>
           <ul class="our-advantages-ul">
-            <li>
+            <li class="our-advantages-li">
               <div class="oa-icon-container">
                 <svg class="our-advantages-icon">
                   <use href="./images/icons.svg#icon-antenna"></use>
@@ -94,7 +178,7 @@
                 the perfect and creative solution.
               </p>
             </li>
-            <li>
+            <li class="our-advantages-li">
               <div class="oa-icon-container">
                 <svg class="our-advantages-icon">
                   <use href="./images/icons.svg#icon-clock"></use>
@@ -107,7 +191,7 @@
                 within the shortest possible time.
               </p>
             </li>
-            <li>
+            <li class="our-advantages-li">
               <div class="oa-icon-container">
                 <svg class="our-advantages-icon">
                   <use href="./images/icons.svg#icon-diagram"></use>
@@ -120,7 +204,7 @@
                 growth opportunities and minimize risk.
               </p>
             </li>
-            <li>
+            <li class="our-advantages-li">
               <div class="oa-icon-container">
                 <svg class="our-advantages-icon">
                   <use href="./images/icons.svg#icon-astronaut"></use>
@@ -139,7 +223,7 @@
 
       <!-- What Are We Doing Section -->
 
-      <section class="section">
+      <section class="section wawd-section">
         <div class="container">
           <h2 class="title h2">What are we doing</h2>
           <ul class="wawd">
@@ -563,6 +647,14 @@
     </div>
 
     <!-- JavaScript -->
+
+    <script
+      defer
+      src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+      integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+      crossorigin="anonymous"
+    ></script>
+    <script defer src="js/mobile-menu.js"></script>
 
     <script src="./js/modal.js"></script>
   </body>
