--- a/portfolio.html
+++ b/portfolio.html
@@ -35,12 +35,12 @@
             >
             <ul class="nav-ul">
               <li>
-                <a href="./index.html" class="link current-link h-link"
-                  >Studio</a
-                >
+                <a href="./index.html" class="link h-link">Studio</a>
               </li>
               <li>
-                <a href="./portfolio.html" class="link h-link">Portfolio</a>
+                <a href="./portfolio.html" class="link current-link h-link"
+                  >Portfolio</a
+                >
               </li>
               <li><a href="" class="link h-link">Contacts</a></li>
             </ul>
