--- a/index.html
+++ b/index.html
@@ -229,6 +229,7 @@
           <ul class="wawd">
             <li>
               <img
+                srcset="./images/pc.jpg 1x, ./images/pc@2x.jpg 2x"
                 src="./images/pc.jpg"
                 alt="PC"
                 width="360"
@@ -238,6 +239,7 @@
             </li>
             <li>
               <img
+                srcset="./images/phone.jpg 1x, ./images/phone@2x.jpg 2x"
                 src="./images/phone.jpg"
                 alt="Shared Phone"
                 width="360"
@@ -247,6 +249,7 @@
             </li>
             <li>
               <img
+                srcset="./images/combo.jpg 1x, ./images/combo@2x.jpg 2x"
                 src="./images/combo.jpg"
                 alt="Mac & Phone"
                 width="360"
@@ -266,6 +269,7 @@
           <ul class="cards our-team-ul">
             <li class="card-li our-team-li">
               <img
+                srcset="./images/worker1.jpg 1x, ./images/worker1@2x.jpg 2x"
                 src="./images/worker1.jpg"
                 alt="Worker 1"
                 width="264"
@@ -309,6 +313,7 @@
             </li>
             <li class="card-li our-team-li">
               <img
+                srcset="./images/worker2.jpg 1x, ./images/worker2@2x.jpg 2x"
                 src="./images/worker2.jpg"
                 alt="Worker 2"
                 width="264"
@@ -352,6 +357,7 @@
             </li>
             <li class="card-li our-team-li">
               <img
+                srcset="./images/worker3.jpg 1x, ./images/worker3@2x.jpg 2x"
                 src="./images/worker3.jpg"
                 alt="Worker 3"
                 width="264"
@@ -395,6 +401,7 @@
             </li>
             <li class="card-li our-team-li">
               <img
+                srcset="./images/worker4.jpg 1x, ./images/worker4@2x.jpg 2x"
                 src="./images/worker4.jpg"
                 alt="Worker 4"
                 width="264"
