--- a/portfolio.html
+++ b/portfolio.html
@@ -175,6 +175,7 @@
               <a href="" class="card-link">
                 <div class="p-card-header">
                   <img
+                    srcset="./images/img-1.jpg 1x, ./images/img-1@2x.jpg 2x"
                     src="./images/img-1.jpg"
                     alt="Slides of app"
                     width="360px"
@@ -199,6 +200,7 @@
               <a href="" class="card-link">
                 <div class="p-card-header">
                   <img
+                    srcset="./images/img-2.jpg 1x, ./images/img-2@2x.jpg 2x"
                     src="./images/img-2.jpg"
                     alt="NFC Payment"
                     width="360px"
@@ -223,6 +225,7 @@
               <a href="" class="card-link">
                 <div class="p-card-header">
                   <img
+                    srcset="./images/img-3.jpg 1x, ./images/img-3@2x.jpg 2x"
                     src="./images/img-3.jpg"
                     alt="Notebook and Phone"
                     width="360px"
@@ -247,6 +250,7 @@
               <a href="" class="card-link">
                 <div class="p-card-header">
                   <img
+                    srcset="./images/img-4.jpg 1x, ./images/img-4@2x.jpg 2x"
                     src="./images/img-4.jpg"
                     alt="Driver in Salon"
                     width="360px"
@@ -271,6 +275,7 @@
               <a href="" class="card-link">
                 <div class="p-card-header">
                   <img
+                    srcset="./images/img-5.jpg 1x, ./images/img-5@2x.jpg 2x"
                     src="./images/img-5.jpg"
                     alt="Slide of App on Phone"
                     width="360px"
@@ -295,6 +300,7 @@
               <a href="" class="card-link">
                 <div class="p-card-header">
                   <img
+                    srcset="./images/img-6.jpg 1x, ./images/img-6@2x.jpg 2x"
                     src="./images/img-6.jpg"
                     alt="Fancy Woman"
                     width="360px"
@@ -319,6 +325,7 @@
               <a href="" class="card-link">
                 <div class="p-card-header">
                   <img
+                    srcset="./images/img-7.jpg 1x, ./images/img-7@2x.jpg 2x"
                     src="./images/img-7.jpg"
                     alt="Slides about App"
                     width="360px"
@@ -343,6 +350,7 @@
               <a href="" class="card-link">
                 <div class="p-card-header">
                   <img
+                    srcset="./images/img-8.jpg 1x, ./images/img-8@2x.jpg 2x"
                     src="./images/img-8.jpg"
                     alt="Bunch of Vegetables"
                     width="360px"
@@ -367,6 +375,7 @@
               <a href="" class="card-link">
                 <div class="p-card-header">
                   <img
+                    srcset="./images/img-9.jpg 1x, ./images/img-9@2x.jpg 2x"
                     src="./images/img-9.jpg"
                     alt="Latte Art"
                     width="360px"
