--- a/index.html
+++ b/index.html
@@ -84,13 +84,15 @@
             <nav class="nav">
               <ul class="nav-ul">
                 <li>
-                  <a href="./index.html" class="link h-link">Studio</a>
+                  <a href="./index.html" class="link current-link h-link"
+                    >Studio</a
+                  >
                 </li>
                 <li>
                   <a href="./portfolio.html" class="link h-link">Portfolio</a>
                 </li>
                 <li>
-                  <a href="" class="link current-link h-link">Contacts</a>
+                  <a href="" class="link h-link">Contacts</a>
                 </li>
               </ul>
             </nav>
@@ -169,7 +171,6 @@
               <div class="oa-icon-container">
                 <svg class="our-advantages-icon">
                   <use href="./images/icons.svg#icon-antenna"></use>
-                  >
                 </svg>
               </div>
               <h3 class="title h3">Strategy</h3>
@@ -182,7 +183,6 @@
               <div class="oa-icon-container">
                 <svg class="our-advantages-icon">
                   <use href="./images/icons.svg#icon-clock"></use>
-                  >
                 </svg>
               </div>
               <h3 class="title h3">Punctuality</h3>
@@ -195,7 +195,6 @@
               <div class="oa-icon-container">
                 <svg class="our-advantages-icon">
                   <use href="./images/icons.svg#icon-diagram"></use>
-                  >
                 </svg>
               </div>
               <h3 class="title h3">Diligence</h3>
@@ -208,7 +207,6 @@
               <div class="oa-icon-container">
                 <svg class="our-advantages-icon">
                   <use href="./images/icons.svg#icon-astronaut"></use>
-                  >
                 </svg>
               </div>
               <h3 class="title h3">Technologies</h3>
@@ -503,62 +501,60 @@
     <!-- Footer -->
 
     <footer class="footer">
-      <div class="container">
-        <div class="footer-container">
-          <div class="footer-logo">
-            <a href="./index.html" class="link logo white"
-              ><span class="logo-item">Web</span>Studio</a
-            >
-            <p class="f-text">
-              Increase the flow of customers and sales for your business with
-              digital marketing & growth solutions.
-            </p>
-          </div>
-          <div class="footer-socials">
-            <h2 class="f-title">Social media</h2>
-            <ul class="f-socials">
-              <li class="socials-item">
-                <a href="" class="f-socials-link">
-                  <svg class="f-socials-icon">
-                    <use href="./images/icons.svg#icon-instagram"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="socials-item">
-                <a href="" class="f-socials-link">
-                  <svg class="f-socials-icon">
-                    <use href="./images/icons.svg#icon-twitter"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="socials-item">
-                <a href="" class="f-socials-link">
-                  <svg class="f-socials-icon">
-                    <use href="./images/icons.svg#icon-facebook"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="socials-item">
-                <a href="" class="f-socials-link">
-                  <svg class="f-socials-icon">
-                    <use href="./images/icons.svg#icon-linkedin"></use>
-                  </svg>
-                </a>
-              </li>
-            </ul>
-          </div>
-          <div class="footer-subscribe">
-            <h2 class="f-title">Subscribe</h2>
-            <form class="f-form">
-              <input type="email" class="f-sub-inp" placeholder="E-mail" />
-              <button type="submit" class="button">
-                Subscribe
-                <svg class="f-sub-icon">
-                  <use href="./images/icons.svg#icon-send"></use>
+      <div class="container footer-container">
+        <div class="footer-logo">
+          <a href="./index.html" class="link logo white"
+            ><span class="logo-item">Web</span>Studio</a
+          >
+          <p class="f-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="footer-socials">
+          <p class="f-title">Social media</p>
+          <ul class="f-socials">
+            <li class="socials-item">
+              <a href="" class="f-socials-link">
+                <svg class="f-socials-icon">
+                  <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
-              </button>
-            </form>
-          </div>
+              </a>
+            </li>
+            <li class="socials-item">
+              <a href="" class="f-socials-link">
+                <svg class="f-socials-icon">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="socials-item">
+              <a href="" class="f-socials-link">
+                <svg class="f-socials-icon">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="socials-item">
+              <a href="" class="f-socials-link">
+                <svg class="f-socials-icon">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
+        <div class="footer-subscribe">
+          <p class="f-title">Subscribe</p>
+          <form class="f-form">
+            <input type="email" class="f-sub-inp" placeholder="E-mail" />
+            <button type="submit" class="button">
+              Subscribe
+              <svg class="f-sub-icon">
+                <use href="./images/icons.svg#icon-send"></use>
+              </svg>
+            </button>
+          </form>
         </div>
       </div>
     </footer>
