--- a/portfolio.html
+++ b/portfolio.html
@@ -178,8 +178,8 @@
                     srcset="./images/img-1.jpg 1x, ./images/img-1@2x.jpg 2x"
                     src="./images/img-1.jpg"
                     alt="Slides of app"
-                    width="360px"
-                    height="300px"
+                    width="360"
+                    height="300"
                     class="image"
                   />
                   <div class="p-card-desc">
@@ -203,8 +203,8 @@
                     srcset="./images/img-2.jpg 1x, ./images/img-2@2x.jpg 2x"
                     src="./images/img-2.jpg"
                     alt="NFC Payment"
-                    width="360px"
-                    height="300px"
+                    width="360"
+                    height="300"
                     class="image"
                   />
                   <div class="p-card-desc">
@@ -228,8 +228,8 @@
                     srcset="./images/img-3.jpg 1x, ./images/img-3@2x.jpg 2x"
                     src="./images/img-3.jpg"
                     alt="Notebook and Phone"
-                    width="360px"
-                    height="300px"
+                    width="360"
+                    height="300"
                     class="image"
                   />
                   <div class="p-card-desc">
@@ -253,8 +253,8 @@
                     srcset="./images/img-4.jpg 1x, ./images/img-4@2x.jpg 2x"
                     src="./images/img-4.jpg"
                     alt="Driver in Salon"
-                    width="360px"
-                    height="300px"
+                    width="360"
+                    height="300"
                     class="image"
                   />
                   <div class="p-card-desc">
@@ -278,8 +278,8 @@
                     srcset="./images/img-5.jpg 1x, ./images/img-5@2x.jpg 2x"
                     src="./images/img-5.jpg"
                     alt="Slide of App on Phone"
-                    width="360px"
-                    height="300px"
+                    width="360"
+                    height="300"
                     class="image"
                   />
                   <div class="p-card-desc">
@@ -303,8 +303,8 @@
                     srcset="./images/img-6.jpg 1x, ./images/img-6@2x.jpg 2x"
                     src="./images/img-6.jpg"
                     alt="Fancy Woman"
-                    width="360px"
-                    height="300px"
+                    width="360"
+                    height="300"
                     class="image"
                   />
                   <div class="p-card-desc">
@@ -328,8 +328,8 @@
                     srcset="./images/img-7.jpg 1x, ./images/img-7@2x.jpg 2x"
                     src="./images/img-7.jpg"
                     alt="Slides about App"
-                    width="360px"
-                    height="300px"
+                    width="360"
+                    height="300"
                     class="image"
                   />
                   <div class="p-card-desc">
@@ -353,8 +353,8 @@
                     srcset="./images/img-8.jpg 1x, ./images/img-8@2x.jpg 2x"
                     src="./images/img-8.jpg"
                     alt="Bunch of Vegetables"
-                    width="360px"
-                    height="300px"
+                    width="360"
+                    height="300"
                     class="image"
                   />
                   <div class="p-card-desc">
@@ -378,8 +378,8 @@
                     srcset="./images/img-9.jpg 1x, ./images/img-9@2x.jpg 2x"
                     src="./images/img-9.jpg"
                     alt="Latte Art"
-                    width="360px"
-                    height="300px"
+                    width="360"
+                    height="300"
                     class="image"
                   />
                   <div class="p-card-desc">
